Use Android-compatible file APIs in architecture guard